package NYT.NJobTrackerClient.NProto;

import "yt/core/misc/guid.proto";
import "yt/ytlib/job_tracker_client/job.proto";
import "yt/ytlib/node_tracker_client/node.proto";

////////////////////////////////////////////////////////////////////////////////

// Informs Job Tracker about node status and requests orders.

message TReqHeartbeat
{
    required int32 node_id = 1;
    required NNodeTrackerClient.NProto.TAddressMap addresses = 2;
    required NNodeTrackerClient.NProto.TNodeResources resource_usage = 3;
    required NNodeTrackerClient.NProto.TNodeResources resource_limits = 4;
    repeated TJobStatus jobs = 5;
}

message TJobStartInfo
{
    required NYT.NProto.TGuid job_id = 1;
    required TJobSpec spec = 2;
    // Resource limits as predicted by the controller.
    required NNodeTrackerClient.NProto.TNodeResources resource_limits = 3;
}

message TRspHeartbeat
{
    repeated TJobStartInfo jobs_to_start = 1;
    repeated NYT.NProto.TGuid jobs_to_abort = 2;
    repeated NYT.NProto.TGuid jobs_to_remove = 3;
}

////////////////////////////////////////////////////////////////////////////////

